# cloudwright

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  SECURITY.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: architecture-review.yml  ci.yml  publish.yml
benchmark/: evaluate.py  report.py  run.py
benchmark/results/: benchmark_report.md  benchmark_results.json  benchmark_results_evaluated.json  benchmark_results_v2.json  benchmark_results_v2_evaluated.json  full_benchmark_evaluated.json  full_benchmark_report.md  full_benchmark_results.json
catalog/: equivalences.json
catalog/aws/: compute.json  (+3 more)
docs/: analysis-prompt.md  archspec.md  competitor-landscape.md  fix-plan.md
examples/: basic_design.py  full_demo.py  multi_cloud_comparison.py  policy_rules.yaml  terraform_export.py
skills/: README.md  cloudwright-analyze.md  cloudwright-catalog.md  cloudwright-chat.md  cloudwright-cost-reduce.md  cloudwright-cost.md  cloudwright-design-optimize.md  cloudwright-design.md  cloudwright-export.md  cloudwright-lint.md  cloudwright-migrate-provider.md  cloudwright-score.md  cloudwright-security-harden.md  cloudwright-security.md  cloudwright-shared.md  cloudwright-validate.md  persona-cloud-architect.md  persona-cost-engineer.md  persona-security-reviewer.md  recipe-architecture-review.md  recipe-compliance-audit.md  recipe-cost-optimize.md  recipe-deploy-ready.md
(+69 files in other folders)
